Updating config for PHP

--- a/inventory/group_vars/php.yml
+++ b/inventory/group_vars/php.yml
@@ -12,7 +12,13 @@ l10n_git_version: master
 timezone: Central Time (US & Canada)
 
 # Used for the LetsEncrypt email setting
-developer_email: jason@picnichillpantry.com
+developer_email: ofn-usa@openfoodnetwork.net
 
 # Users listed here will have their key from /files/keys added to the unicorn_user
 users_sysadmin:
+  - "{{ core_devs }}"
+  - brandy
+  - dani
+  - tim
+  - ravi
+  - andy
