--- a/inventory/group_vars/php.yml
+++ b/inventory/group_vars/php.yml
@@ -16,9 +16,4 @@ developer_email: ofn-usa@openfoodnetwork.net
 
 # Users listed here will have their key from /files/keys added to the unicorn_user
 users_sysadmin:
-  - "{{ core_devs }}"
-  - brandy
-  - dani
-  - tim
-  - ravi
-  - andy
+  - php
