--- a/inventory/group_vars/us.yml
+++ b/inventory/group_vars/us.yml
@@ -16,3 +16,9 @@ developer_email: jason@picnichillpantry.com
 
 # Users listed here will have their key from /files/keys added to the unicorn_user
 users_sysadmin:
+  - "{{ core_devs }}"
+  - brandy
+  - dani
+  - tim
+  - ravi
+  - andy
